derive/tests/ui/attr-missing-rpc-name.stderr
error: rpc attribute should have a name e.g. `name = "method_name"`
  --> $DIR/attr-missing-rpc-name.rs:8:2
   |
8  |       /// Returns a protocol version
   |  _____^
9  | |     #[rpc]
10 | |     fn protocol_version(&self) -> Result<String>;
   | |_________________________________________________^
